# Duckvil

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  msvc.yml
__generated_reflection__/: reflection_db.json
__generated_reflection__/CSharp/: CSharp.generated.cpp  CSharp.generated.h  Entity.generated.cpp  Entity.generated.h  ReflectionFlags.generated.cpp  ReflectionFlags.generated.h  ReflectionModule.generated.cpp  ReflectionModule.generated.h  SharedScript.generated.cpp  SharedScript.generated.h  TestSharedScript.generated.cpp  TestSharedScript.generated.h  plugin_info.cpp
__generated_reflection__/DependencyInjection/: DependencyInjection.generated.cpp  DependencyInjection.generated.h  IDependencyInjector.generated.cpp  IDependencyInjector.generated.h  IDependencyResolver.generated.cpp  IDependencyResolver.generated.h  Inject.generated.cpp  Inject.generated.h  Injectable.generated.cpp  Injectable.generated.h  ReflectionFlags.generated.cpp  ReflectionFlags.generated.h  ReflectionModule.generated.cpp  ReflectionModule.generated.h  Scope.generated.cpp  Scope.generated.h  plugin_info.cpp
__generated_reflection__/Duckvil/: Duckvil.generated.cpp  Duckvil.generated.h  ISystem.generated.cpp  ISystem.generated.h  ReflectionFlags.generated.cpp  ReflectionFlags.generated.h  Time.generated.cpp  Time.generated.h
__generated_reflection__/ECS/: Entity.generated.cpp  Entity.generated.h  EntityFactory.generated.cpp  EntityFactory.generated.h  plugin_info.cpp
__generated_reflection__/Editor/: Draw.generated.cpp  Draw.generated.h  plugin_info.cpp  (+8 more)
docs/: ProjectFilesStructure.drawio
scripting/: CMakeLists.txt
scripts/: travis.sh  travis_auto_merge.sh  travis_merge_check.sh
source/: CMakeLists.txt
source/CSharp/: CMakeLists.txt  CSharp.cpp  Entity.cpp  ReflectionModule.cpp  TestSharedScript.cpp
source/DependencyInjection/: CMakeLists.txt  DependencyInjection.cpp  ReflectionModule.cpp
source/Duckvil/: CMakeLists.txt  Duckvil.cpp  TIme.cpp  main.cpp
source/ECS/: CMakeLists.txt
source/Editor/: CMakeLists.txt  Editor.cpp
source/Editor/ImGui/: ImGuiEditor.cpp
source/Editor/Widgets/: ConsoleWidget.cpp  ContentExplorerWidget.cpp  EngineInfoWidget.cpp  EntityInspectorWidget.cpp  HexEditorWidget.cpp  LoadProjectWidget.cpp  NetworkDebugger.cpp  NewProjectWidget.cpp  RuntimeReflectionWidget.cpp  SceneHierarchyWidget.cpp  ViewportWidget.cpp
source/Engine/: CMakeLists.txt  Duckvil.cpp  Time.cpp  runtime_reflection.cpp
source/Graphics/: CMakeLists.txt  ModelLoader.cpp
source/Graphics/Renderer/: Renderer.cpp
source/HotReloader/: CMakeLists.txt  FileWatcher.cpp  RuntimeCompilerSystem.cpp  TrackKeeper.cpp
source/HotReloader/Network/: HotObjectSync.cpp
source/Logger/: CMakeLists.txt  Logger.cpp  LoggerChannel.cpp
source/Memory/: CMakeLists.txt  Memory.cpp
source/Memory/Internal/: Allocator.cpp  ByteBuffer.cpp  FixedArrayAllocator.cpp  FixedQueueAllocator.cpp  FixedStackAllocator.cpp  FixedVectorAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  QueueAllocator.cpp  StackAllocator.cpp
source/Network/: CMakeLists.txt  Client.cpp  Connection.cpp  Server.cpp
source/Parser/: AST.cpp  CMakeLists.txt  Lexer.cpp  Tokenizer.cpp  config.cpp  parser.cpp
source/PlugNPlay/: AutoLoader.cpp  CMakeLists.txt  Module.cpp  Plugin.cpp
source/PlugNPlay/Platform/Linux/: Module.cpp
source/PlugNPlay/Platform/Windows/: Module.cpp
source/Process/: CMakeLists.txt  Process.cpp
source/Process/Platform/Linux/: Process.cpp
source/Process/Platform/Windows/: Process.cpp
source/ProjectManager/: CMakeLists.txt  ProjectManager.cpp
source/RayTracer/: CMakeLists.txt  RayTracer.cpp  kernel.cu
source/ReflectionGenerator/: CMakeLists.txt  ReflectionGenerator.cpp
source/RuntimeCompiler/: CMakeLists.txt  FileWatcher.cpp  RuntimeCompiler.cpp  RuntimeCompilerSystem.cpp
source/RuntimeCompiler/Platform/Linux/: Compiler.cpp
source/RuntimeCompiler/Platform/Windows/: Compiler.cpp
source/RuntimeDatabase/: CMakeLists.txt  RuntimeDatabase.cpp
source/RuntimeReflection/: CMakeLists.txt  Generator.cpp  Recorder.cpp  RuntimeReflection.cpp
source/RuntimeReflectionStatic/: CMakeLists.txt
source/RuntimeReflectionStatic/Global/: argument.cpp  constructor.cpp  enum.cpp  function.cpp  object.cpp  property.cpp  type.cpp  variant.cpp
source/RuntimeReflectionStatic/Local/: argument.cpp  constructor.cpp  enum.cpp  function.cpp  object.cpp  property.cpp  type.cpp  variant.cpp
source/ScriptEngine/: CMakeLists.txt  ScriptEngine.cpp
source/Serializer/: CMakeLists.txt  EntitySerializerSystem.cpp
source/TestRuntimeReflectionType/: CMakeLists.txt  Test.cpp
source/TestSystem/: CMakeLists.txt  TestSystem.cpp
source/Thread/: CMakeLists.txt  ThreadPool.cpp
source/UniTestFramework/: CMakeLists.txt  UniTestFramework.cpp
source/Utils/: AST.cpp  CMakeLists.txt  CommandArgumentsParser.cpp  ECS.cpp  FunctionArgumentsPusher.cpp  Graphics.cpp  RuntimeDependencyInjector.cpp  TemplateEngine.cpp  UUID.cpp  Utils.cpp  md5.cpp
source/Window/: CMakeLists.txt  SDL_Window.cpp
source/_tracy/: CMakeLists.txt
test/: CMakeLists.txt
test/PlugNPlay/: Module.cpp
test/TestMemory/: 1Module.cpp  2MainMemoryAllocation.cpp  3ArrayAllocation.cpp  3ByteBufferAllocation.cpp  3FreeListAllocation.cpp  3LinearAllocation.cpp  3QueueAllocation.cpp  3StackAllocation.cpp  3VectorAllocation.cpp  4ComboAllocation.cpp  ArrayAllocation.cpp  CMakeLists.txt  FreeListAllocation.cpp  LinearAllocation.cpp  MainMemoryAllocation.cpp  MainMemoryAllocation.h  Module.h  QueueAllocation.cpp  StackAllocation.cpp  VectorAllocation.cpp
test/TestModule/: CMakeLists.txt  Module.cpp  Module.h  TestModule.cpp
test/TestRuntimeReflection/: CMakeLists.txt  Module.h  TestRuntimeReflection.cpp
test/TestRuntimeReflection/TestType/: TestType.cpp  TestType.generated.cpp  TestType.h  plugin_info.cpp
test/TestThread/: CMakeLists.txt  State.h  TestThread.cpp
test/TestUniTestFramework/: CMakeLists.txt  TestUniTestFramework.cpp
test/TestUtils/: CMakeLists.txt  CommandLineParser.cpp  Split.cpp
(+710 files in other folders)
